# ChatApp

./: README.md
Week_1/: README.md  Week_1.odt
Week_1/Code/: Cbuff.c  Queue.c  Statemachine.c
Week_1/Documents/: Week_1.odt  shedulers.odt
Week_1/UDP_CHAT/Full_Duplex/: chat  chat.c  udp_chat.c
Week_1/UDP_CHAT/Server_Client/: udp_client.c  udp_server.c
Week_1/rough_works/Week_1/: .~lock.Week_1.odt#
Week_2/: README.md
Week_2/Documents/: BGM220P.odt  Week_2.odt
Week_2/bgm220p/: Kconfig.board  board.cmake  toolchain-override.cmake  toolchain.cmake
Week_2/blinky_app/: CMakeLists.txt
Week_2/blinky_app/src/: main.c
Week_2/config_files/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc
rough_works/: Llist.c  a.out  chat.c  udp_client.c  udp_server.c
